--- a/repertoire.server/.env.dev
+++ b/repertoire.server/.env.dev
@@ -13,3 +13,8 @@ DB_SSL_MODE=disable
 # Logging
 LOG_OUTPUT=./server.log
 LOG_LEVEL=DEBUG
+
+# JWT Info
+JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
+JWT_ISSUER=Repertoire
+JWT_AUDIENCE=Repertoire
