--- a/repertoire.server/docker-compose.yaml
+++ b/repertoire.server/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     container_name: Repertoire-Server
     ports:
-      - "${APPLICATION_PORT}:8080"
+      - "${SERVER_PORT}:8080"
     depends_on:
       - database
 
