#3 Server - Api - New Middleware: Jwt Auth + Private and Public Routes to exclude users that do not have a valid token

--- a/repertoire.server/.env.dev
+++ b/repertoire.server/.env.dev
@@ -12,7 +12,7 @@ DB_SSL_MODE=disable
 
 # Logging
 LOG_OUTPUT=./server.log
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
 
 # JWT Info
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
