--- a/repertoire.desktop/package.json
+++ b/repertoire.desktop/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
