--- a/repertoire.desktop/package.json
+++ b/repertoire.desktop/package.json
@@ -23,16 +23,18 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.3.9"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@reduxjs/toolkit": "^2.2.8",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "async-mutex": "^0.5.0",
     "electron": "^32.2.0",
     "electron-builder": "^25.1.7",
     "electron-vite": "^2.3.0",
@@ -41,6 +43,7 @@
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
