--- a/repertoire.desktop/package.json
+++ b/repertoire.desktop/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "repertoire.ui": "file:../repertoire.ui",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
