--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -9,17 +9,20 @@
   },
   "dependencies": {
     "@mantine/core": "^7.13.2",
+    "@mantine/form": "^7.13.3",
     "@mantine/hooks": "^7.13.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "^3.19.0",
     "async-mutex": "^0.5.0",
+    "mantine-form-zod-resolver": "^1.1.0",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
