--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "repertoire.ui",
   "version": "1.0.0",
+  "type": "module",
   "description": "Music Application UI",
   "author": "",
   "license": "MIT",
@@ -25,12 +26,16 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.3"
+    "globals": "^15.11.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.9.0"
   }
 }
