--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.11.0",
     "prettier": "3.3.3",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0"
+    "typescript-eslint": "^8.9.0",
+    "vite": "^5.4.9"
   }
 }
