--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -27,6 +27,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -34,9 +37,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
+    "happy-dom": "^15.7.4",
+    "msw": "^2.5.0",
     "prettier": "3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.3"
   }
 }
