#65 UI - Add Testing Running Scripts

--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -6,7 +6,9 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@mantine/core": "^7.13.2",
