--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint .",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
