--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 3
     name: Build 🔨
     steps:
     - name: Checkout Repo
@@ -19,6 +19,10 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.18.0'
+
+    - name: Install UI Depedencies
+      working-directory: repertoire.ui/
+      run: npm ci
 
     - name: Install Depedencies
       working-directory: repertoire.web/
