--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -7,6 +7,27 @@ on:
     branches: [ "develop" ]
 
 jobs:
+  typecheck:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    name: Typecheck ⌨️
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v4
+
+    - name: Set up node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.18.0'
+
+    - name: Install Dependencies
+      working-directory: repertoire.ui/
+      run: npm ci
+
+    - name: Typecheck
+      working-directory: repertoire.ui/
+      run: npm run typecheck
+
   unit-testing:
     runs-on: ubuntu-latest
     timeout-minutes: 3
@@ -20,7 +41,7 @@ jobs:
       with:
         node-version: '20.18.0'
 
-    - name: Install Depedencies
+    - name: Install Dependencies
       working-directory: repertoire.ui/
       run: npm ci
 
