--- a/repertoire.ui/tsconfig.json
+++ b/repertoire.ui/tsconfig.json
@@ -1,19 +1,29 @@
 {
   "compilerOptions": {
-    "module": "es2022",
+    "target": "ES2022",
+    "module": "ESNext",
+    "skipLibCheck": true,
     "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "composite": true,
-    "jsx": "react-jsx",
     "baseUrl": ".",
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "types": [
       "vitest/globals",
       "@testing-library/jest-dom"
     ]
   },
-  "lib": [
-    "es2015"
-  ]
+  "lib": ["ES2023"],
+  "include": ["src"]
 }
