--- a/repertoire.desktop/tsconfig.web.json
+++ b/repertoire.desktop/tsconfig.web.json
@@ -11,6 +11,7 @@
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "strict": false,
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
