--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@electron-toolkit/preload": "^3.0.1",
     "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
