#88 Web - Tsconfig - use only the App from the UI

--- a/repertoire.web/tsconfig.app.json
+++ b/repertoire.web/tsconfig.app.json
@@ -6,8 +6,8 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
-      "@ui/*": [
-        "../repertoire.ui/src/*"
+      "@ui/App": [
+        "../repertoire.ui/src/App"
       ]
     },
 
@@ -25,8 +25,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src",
-    "../repertoire.ui/src/*.tsx"
-  ]
+  "include": ["src"]
 }
