--- a/repertoire.server/.env.dev
+++ b/repertoire.server/.env.dev
@@ -20,3 +20,6 @@ LOG_LEVEL=INFO
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
 JWT_ISSUER=Repertoire
 JWT_AUDIENCE=Repertoire
+
+# Storage
+STORAGE_SERVER_URL=http://localhost:8020/api/storage
