#109 Server - Environment Variables - Divide the Storage Url into Upload and Fetch (Fetch is meant to be used outside on the receiving end, and Upload is used on the server)

--- a/repertoire.server/.env.dev
+++ b/repertoire.server/.env.dev
@@ -22,4 +22,5 @@ JWT_ISSUER=Repertoire
 JWT_AUDIENCE=Repertoire
 
 # Storage
-STORAGE_SERVER_URL=http://localhost:8020/api/storage
+UPLOAD_STORAGE_URL=http://localhost:8020/storage
+FETCH_STORAGE_URL=http://localhost:8020/storage
