--- a/repertoire.server/.env.prod
+++ b/repertoire.server/.env.prod
@@ -22,4 +22,5 @@ JWT_ISSUER=Repertoire
 JWT_AUDIENCE=Repertoire
 
 # Storage
-STORAGE_SERVER_URL=http://localhost:8020/api/storage
+UPLOAD_STORAGE_URL=http://localhost:8020/storage
+FETCH_STORAGE_URL=http://localhost:8020/storage
