--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -14,7 +14,12 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/serialize": "^1.3.2",
+    "@emotion/utils": "^1.4.1",
     "@mantine/core": "^7.13.2",
+    "@mantine/emotion": "^7.13.4",
     "@mantine/form": "^7.13.3",
     "@mantine/hooks": "^7.13.2",
     "@reduxjs/toolkit": "^2.3.0",
