--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -19,12 +19,15 @@
     "@emotion/serialize": "^1.3.2",
     "@emotion/utils": "^1.4.1",
     "@mantine/core": "^7.13.5",
+    "@mantine/dates": "^7.13.5",
+    "@mantine/dropzone": "^7.13.5",
     "@mantine/emotion": "^7.13.5",
     "@mantine/form": "^7.13.5",
     "@mantine/hooks": "^7.13.5",
     "@reduxjs/toolkit": "^2.3.0",
     "@tabler/icons-react": "^3.21.0",
     "async-mutex": "^0.5.0",
+    "dayjs": "^1.11.13",
     "mantine-form-zod-resolver": "^1.1.0",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
@@ -33,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
