--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
+    "uuid": "^11.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
