--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/serialize": "^1.3.2",
     "@emotion/utils": "^1.4.1",
+    "@hello-pangea/dnd": "^17.0.0",
     "@mantine/core": "^7.13.5",
     "@mantine/dates": "^7.13.5",
     "@mantine/dropzone": "^7.13.5",
