--- a/repertoire.web/package.json
+++ b/repertoire.web/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@mantine/core": "^7.13.5",
+    "@mantine/emotion": "^7.13.5",
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
