--- a/repertoire.desktop/package.json
+++ b/repertoire.desktop/package.json
@@ -30,6 +30,8 @@
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@mantine/core": "^7.13.5",
+    "@mantine/emotion": "^7.13.5",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
