--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -38,5 +38,7 @@ jobs:
         go-version: '1.23.1'
 
     - name: Test
-      working-directory: repertoire.server/
+      working-directory: repertoire.server/test/unit/
+      run: go test -v ./...
+
       run: go test -v ./...
