#155 Server - Add Github Integration Testing Pipeline

--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -41,4 +41,19 @@ jobs:
       working-directory: repertoire.server/test/unit/
       run: go test -v ./...
 
+  integration-testing:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    name: Integration Testing 🧪
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23.1'
+
+    - name: Test
+      working-directory: repertoire.server/test/integration/
       run: go test -v ./...
