--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -43,7 +43,7 @@ jobs:
 
   integration-testing:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 7
     name: Integration Testing 🧪
     steps:
     - name: Checkout Repo
@@ -53,6 +53,10 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.23.1'
+
+    - name: Setup Environment
+      working-directory: repertoire.server/
+      run: cp .env.dev .env
 
     - name: Test
       working-directory: repertoire.server/test/integration/
