#190 Server - Environment Variables - Set JWT Issuer

--- a/repertoire.server/.env.prod
+++ b/repertoire.server/.env.prod
@@ -18,7 +18,7 @@ LOG_LEVEL=WARN
 
 # JWT Info
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
-JWT_ISSUER=Repertoire
+JWT_ISSUER=http://localhost:8000/api
 JWT_AUDIENCE=Repertoire
 
 # Storage
