#190 Storage - Set New Environment Variables for Authentication

--- a/repertoire.storage/.env.prod
+++ b/repertoire.storage/.env.prod
@@ -1,8 +1,8 @@
 # Application
 SERVER_HOST=localhost
 SERVER_PORT=8020
-ENV=development
-GIN_MODE=debug
+ENV=production
+GIN_MODE=release
 
 # Authentication
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
