--- a/repertoire.server/.env.prod
+++ b/repertoire.server/.env.prod
@@ -22,6 +22,7 @@ JWT_ISSUER=http://localhost:8000/api
 JWT_AUDIENCE=Repertoire
 
 # Storage
+AUTH_STORAGE_URL=http://localhost:8020/oauth/token
 UPLOAD_STORAGE_URL=http://localhost:8020/storage
 FETCH_STORAGE_URL=http://localhost:8020/storage
 STORAGE_CLIENT_ID=storage_service_id
