#237 Storage - Docker compose - add Upload directory as volume

--- a/repertoire.storage/docker-compose.yaml
+++ b/repertoire.storage/docker-compose.yaml
@@ -12,3 +12,5 @@ services:
       - SERVER_HOST=0.0.0.0
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
+    volumes:
+      - ${UPLOAD_DIRECTORY}:/${UPLOAD_DIRECTORY}
