--- a/repertoire.desktop/tsconfig.web.json
+++ b/repertoire.desktop/tsconfig.web.json
@@ -5,6 +5,7 @@
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
     "src/preload/*.d.ts",
+    "../repertoire.ui/src/App.tsx"
   ],
   "compilerOptions": {
     "composite": true,
@@ -17,7 +18,7 @@
         "src/renderer/src/*"
       ],
       "@ui/App": [
-        "../repertoire.ui/src/App"
+        "../repertoire.ui/src/App.tsx"
       ]
     }
   }
