--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "typecheck": "tsc -b --verbose",
     "test": "vitest",
-    "test:ui": "vitest --ui",
+    "test:ui": "vitest --ui --api 9527",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
@@ -50,6 +50,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
