#257 Server - Add JWT Expiration time to Environment Variables

--- a/repertoire.server/.env.prod
+++ b/repertoire.server/.env.prod
@@ -20,6 +20,7 @@ LOG_LEVEL=WARN
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
 JWT_ISSUER=http://localhost:8000/api
 JWT_AUDIENCE=Repertoire
+JWT_EXPIRATION_TIME=30m
 
 # Storage
 AUTH_STORAGE_URL=http://localhost:8020/oauth/token
