--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,7 @@ jobs:
         context: repertoire.server/
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-server:$VERSION
-        build-args: 
-          - SERVER_PORT=8000
+        build-args: ['SERVER_PORT=8000']
 
   deploy-storage:
     runs-on: ubuntu-latest
@@ -56,5 +55,4 @@ jobs:
         context: repertoire.storage/
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-storage:$VERSION
-        build-args: 
-          - SERVER_PORT=8020
+        build-args: ['SERVER_PORT=8020']
