--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,8 +30,8 @@ jobs:
       with:
         context: repertoire.server/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-server:$VERSION
-        build-args: [ "SERVER_PORT=8000" ]
+        tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-server:${{ env.VERSION }}
+        build-args: SERVER_PORT=8000
 
   deploy-storage:
     runs-on: ubuntu-latest
@@ -56,5 +56,5 @@ jobs:
       with:
         context: repertoire.storage/
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-storage:$VERSION
-        build-args: [ "SERVER_PORT=8020" ]
+        tags: ${{ secrets.DOCKER_USERNAME }}/repertoire-storage:${{ env.VERSION }}
+        build-args: SERVER_PORT=8020
