--- a/repertoire.server/.env.dev
+++ b/repertoire.server/.env.dev
@@ -20,7 +20,7 @@ LOG_LEVEL=INFO
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
 JWT_ISSUER=http://localhost:8000/api
 JWT_AUDIENCE=Repertoire
-JWT_EXPIRATION_TIME=30m
+JWT_EXPIRATION_TIME=1h
 
 # Storage
 AUTH_STORAGE_URL=http://localhost:8020/oauth/token
