--- a/repertoire.desktop/.env.prod
+++ b/repertoire.desktop/.env.prod
@@ -1,5 +1,5 @@
-VITE_BACKEND_URL=http://localhost:8000/api
+VITE_BACKEND_URL=
 
-VITE_APPLICATION_PORT=8010
+VITE_APPLICATION_PORT=8010 # not relevant
 VITE_PLATFORM=desktop
 VITE_ENVIRONMENT=production
