Revert "#247 Desktop & Web - Remove Installation of UI Dependencies for TypeChecking Job"
This reverts commit d055f0093b5418565b2e242352cf8f2c76a71e7a.

--- a/.github/workflows/desktop.yaml
+++ b/.github/workflows/desktop.yaml
@@ -20,6 +20,10 @@ jobs:
       with:
         node-version: '20.18.0'
 
+    - name: Install UI Dependencies
+      working-directory: repertoire.ui/
+      run: npm ci
+
     - name: Install Dependencies
       working-directory: repertoire.desktop/
       run: npm ci
