--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -64,14 +64,17 @@ jobs:
       - name: Extract version from package.json
         working-directory: repertoire.desktop/
         run: |
-          VERSION=$(awk -F'[":,]' '/"version"/ {gsub(/^[ \t]+|[ \t]+$/, "", $3); print $3}' package.json)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$(awk -F '[:", ]+' '/"version"/ {print $3}' package.json)" >> $GITHUB_ENV
 
       - name: Setup Environment Variables
         working-directory: repertoire.desktop/
         run: cp .env.prod .env
         env:
           VITE_BACKEND_URL: ${{ secrets.BACKEND_URL }}
+
+      - name: Install UI Dependencies
+        working-directory: repertoire.ui/
+        run: npm ci
 
       - name: Install Dependencies
         working-directory: repertoire.desktop/
