--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -1,9 +1,8 @@
 {
   "name": "repertoire.ui",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "type": "module",
   "description": "Music Application UI",
-  "author": "",
   "license": "MIT",
   "scripts": {
     "format": "prettier --write .",
@@ -14,53 +13,53 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@emotion/cache": "^11.13.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/serialize": "^1.3.2",
-    "@emotion/utils": "^1.4.1",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/serialize": "^1.3.3",
+    "@emotion/utils": "^1.4.2",
     "@hello-pangea/dnd": "^17.0.0",
-    "@mantine/core": "^7.13.5",
-    "@mantine/dates": "^7.13.5",
-    "@mantine/dropzone": "^7.13.5",
-    "@mantine/emotion": "^7.13.5",
-    "@mantine/form": "^7.13.5",
-    "@mantine/hooks": "^7.13.5",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@tabler/icons-react": "^3.21.0",
+    "@mantine/core": "^7.16.1",
+    "@mantine/dates": "^7.16.1",
+    "@mantine/dropzone": "^7.16.1",
+    "@mantine/emotion": "^7.16.1",
+    "@mantine/form": "^7.16.1",
+    "@mantine/hooks": "^7.16.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tabler/icons-react": "^3.28.1",
     "async-mutex": "^0.5.0",
     "dayjs": "^1.11.13",
     "mantine-form-zod-resolver": "^1.1.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.1",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6",
-    "uuid": "^11.0.2",
-    "zod": "^3.23.8"
+    "react-toastify": "^11.0.3",
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.1",
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.18.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitest/ui": "^2.1.8",
-    "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.12.0",
-    "happy-dom": "^15.11.0",
-    "msw": "^2.6.2",
-    "prettier": "3.3.3",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0",
-    "vite": "^5.4.10",
-    "vitest": "^2.1.4"
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@types/node": "^22.10.7",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitest/ui": "^3.0.2",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "happy-dom": "^16.6.0",
+    "msw": "^2.7.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "vite": "^6.0.8",
+    "vitest": "^3.0.2"
   }
 }
