#383 Server - Add MeiliSearch to the Backend Environment

--- a/repertoire.server/.env.sample
+++ b/repertoire.server/.env.sample
@@ -28,3 +28,7 @@ UPLOAD_STORAGE_URL=
 FETCH_STORAGE_URL=
 STORAGE_CLIENT_ID=
 STORAGE_CLIENT_SECRET=
+
+# Meilisearch
+MEILI_PORT=
+MEILI_MASTER_KEY=
