--- a/repertoire.server/docker-compose.yaml
+++ b/repertoire.server/docker-compose.yaml
@@ -49,8 +49,21 @@ services:
       - "${MEILI_PORT}:7700"
     environment:
       - MEILI_MASTER_KEY=${MEILI_MASTER_KEY}
-      # - MEILI_TASK_WEBHOOK_URL=http://Repertoire-Server:${SERVER_PORT}/api/search/webhook
+      # - MEILI_TASK_WEBHOOK_URL=http://Repertoire-Server:${SERVER_PORT}/api/search/webhook # use me when running server in docker
       - MEILI_TASK_WEBHOOK_URL=${MEILI_WEBHOOK_URL}
       - MEILI_TASK_WEBHOOK_AUTHORIZATION_HEADER=${MEILI_WEBHOOK_AUTHORIZATION_KEY}
     volumes:
       - ./.container-data/meili_data:/meili_data
+
+  centrifugo:
+    image: centrifugo/centrifugo:v6
+    container_name: Repertoire-Centrifugo
+    command: centrifugo -c /centrifugo/config.json
+    ports:
+      - "8003:8000"
+    volumes:
+      - ./centrifugo-config.json:/centrifugo/config.json
+    ulimits:
+      nofile:
+        soft: 65535
+        hard: 65535
