#423 Desktop & Web - Add Centrifugo URL

--- a/repertoire.web/.env.dev
+++ b/repertoire.web/.env.dev
@@ -1,6 +1,7 @@
-VITE_BACKEND_URL=http://localhost:8000/api
-
 VITE_APPLICATION_PORT=8011
 VITE_PLATFORM=web
 
-ENVIRONMENT=dev
+VITE_BACKEND_URL=http://localhost:8000/api
+VITE_CENTRIFUGO_URL=ws://localhost:8003/connection/websocket
+
+Environment=dev
