--- a/repertoire.web/.env.sample
+++ b/repertoire.web/.env.sample
@@ -1,6 +1,7 @@
-VITE_BACKEND_URL=
-
 VITE_APPLICATION_PORT=
 VITE_PLATFORM=
 
-ENVIRONMENT=
+VITE_BACKEND_URL=
+VITE_CENTRIFUGO_URL=
+
+Environment=
