--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tabler/icons-react": "^3.28.1",
     "async-mutex": "^0.5.0",
+    "centrifuge": "^5.3.4",
     "dayjs": "^1.11.13",
     "mantine-form-zod-resolver": "^1.1.0",
     "react": "^18.3.1",
