--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/ws": "^8.18.0",
     "@vitest/ui": "^3.0.6",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -58,6 +59,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.1.1",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.6",
+    "ws": "^8.18.1"
   }
 }
