#429 Storage - Add Custom Logging + on authorization check, log warning error that token was invalid

--- a/repertoire.storage/.env.dev
+++ b/repertoire.storage/.env.dev
@@ -3,6 +3,7 @@ SERVER_HOST=localhost
 SERVER_PORT=8020
 ENV=development
 GIN_MODE=debug
+LOG_LEVEL=INFO
 
 # Authentication
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
