--- a/repertoire.server/docker-compose.yaml
+++ b/repertoire.server/docker-compose.yaml
@@ -12,10 +12,9 @@ services:
       - SERVER_HOST=0.0.0.0
       - DB_HOST=Repertoire-Database
       - DB_PORT=5432
-      - AUTH_STORAGE_URL=http://Repertoire-Storage:8020/oauth/token
-      - UPLOAD_STORAGE_URL=http://Repertoire-Storage:8020/storage
-      - MEILI_HOST=Repertoire-Meilisearch
-      - MEILI_PORT=7700
+      - AUTH_URL=http://Repertoire-Auth:8030/auth
+      - STORAGE_UPLOAD_URL=http://Repertoire-Storage:8020/storage
+      - MEILI_URL=http://Repertoire-Meilisearch:7700
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
     volumes:
@@ -46,7 +45,7 @@ services:
     image: "getmeili/meilisearch:v1.13.0"
     container_name: Repertoire-Meilisearch
     ports:
-      - "${MEILI_PORT}:7700"
+      - "8002:7700"
     environment:
       - MEILI_MASTER_KEY=${MEILI_MASTER_KEY}
       # - MEILI_TASK_WEBHOOK_URL=http://Repertoire-Server:${SERVER_PORT}/api/search/webhook # use me when running server in docker
