--- a/repertoire.server/centrifugo-config.json
+++ b/repertoire.server/centrifugo-config.json
@@ -2,7 +2,7 @@
   "client": {
     "token": {
       "hmac_secret_key": "This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this",
-      "issuer": "http://localhost:8030/api",
+      "issuer": "http://localhost:8030/auth",
       "audience": "Centrifugo"
     },
     "allowed_origins": [
