#429 Desktop & Web - Add Auth URL to Environment Variables

--- a/repertoire.desktop/.env.dev
+++ b/repertoire.desktop/.env.dev
@@ -2,4 +2,5 @@ VITE_APPLICATION_PORT=8010
 VITE_PLATFORM=desktop
 
 VITE_BACKEND_URL=http://localhost:8000/api
+VITE_AUTH_URL=http://localhost:8030/auth
 VITE_CENTRIFUGO_URL=ws://localhost:8003/connection/websocket
