--- a/repertoire.web/.env.dev
+++ b/repertoire.web/.env.dev
@@ -2,6 +2,7 @@ VITE_APPLICATION_PORT=8011
 VITE_PLATFORM=web
 
 VITE_BACKEND_URL=http://localhost:8000/api
+VITE_AUTH_URL=http://localhost:8030/auth
 VITE_CENTRIFUGO_URL=ws://localhost:8003/connection/websocket
 
 Environment=dev
