--- a/repertoire.auth/docker-compose.yaml
+++ b/repertoire.auth/docker-compose.yaml
@@ -14,4 +14,9 @@ services:
       - DB_PORT=5432
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
-    # add network
+    networks:
+      - repertoire_repertoire_network
+
+networks:
+  repertoire_repertoire_network:
+    external: true
