#429 Web - Docker Compose - Auth URL

--- a/repertoire.web/docker-compose.yaml
+++ b/repertoire.web/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     container_name: Repertoire-Web
     env_file: ".env"
     environment:
+      - VITE_AUTH_URL=http://Repertoire-Auth:8030/auth
       - VITE_BACKEND_URL=http://Repertoire-Server:8000/api
     ports:
       - "${VITE_APPLICATION_PORT}:${VITE_APPLICATION_PORT}"
