--- a/repertoire.server/centrifugo-config.json
+++ b/repertoire.server/centrifugo-config.json
@@ -14,6 +14,9 @@
   "engine": {
     "type": "memory"
   },
+  "http_server" : {
+    "port": "8003"
+  },
   "admin": {
     "enabled": true,
     "password": "admin",
