--- a/repertoire.storage/.env.dev
+++ b/repertoire.storage/.env.dev
@@ -7,7 +7,7 @@ LOG_LEVEL=INFO
 
 # Authentication
 JWT_SECRET_KEY=This-is-a-very-super-duper-secret-key-and-it-shall-stay-like-this
-JWT_ISSUER=http://localhost:8030
+JWT_ISSUER=http://localhost:8030/auth
 JWT_AUDIENCE=http://localhost:8000/api
 
 # Storage
