--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# Ignore IntelliJ IDEA project files
 .idea/
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+go.work.sum
+
+# env file
+.env
+
+# GoLand
+.idea/
+
+# Temp
+tmp/
+
+# Node.js dependencies and build output
+node_modules
+dist
+out
+
+# macOS system files
+.DS_Store
+
+# Log files
+*.log*
