--- a/repertoire.desktop/.env.dev
+++ b/repertoire.desktop/.env.dev
@@ -4,3 +4,5 @@ VITE_PLATFORM=desktop
 VITE_BACKEND_URL=http://localhost:8000/api
 VITE_AUTH_URL=http://localhost:8030/auth
 VITE_CENTRIFUGO_URL=ws://localhost:8003/connection/websocket
+
+VITE_WEB_ORIGINS=http://localhost:* ws://localhost:*
