--- a/repertoire.web/package.json
+++ b/repertoire.web/package.json
@@ -17,19 +17,19 @@
     "repertoire.ui": "file:../repertoire.ui"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@mantine/core": "^7.16.1",
-    "@mantine/emotion": "^7.16.1",
-    "@types/node": "^22.10.7",
+    "@eslint/js": "^9.27.0",
+    "@mantine/core": "^8.0.1",
+    "@mantine/emotion": "^8.0.1",
+    "@types/node": "^22.15.21",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.18.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.8"
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.1.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "6.3.4"
   }
 }
