#506 Desktop - Update Electron and ESlint to v9 + refactor electron builder config on ignoring files

--- a/repertoire.desktop/electron-builder.yml
+++ b/repertoire.desktop/electron-builder.yml
@@ -7,7 +7,8 @@ files:
   - '!node_modules/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
-  - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,README.md}'
+  - '!{.editorconfig,.eslintignore,.gitignore,.prettierignore,.prettierrc.yaml,eslint.config.mjs}'
+  - '!{dev-app-update.yml,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
