--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -29,6 +29,7 @@
     "async-mutex": "^0.5.0",
     "centrifuge": "^5.4.0",
     "dayjs": "^1.11.13",
+    "dragselect": "^3.1.1",
     "mantine-form-zod-resolver": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
