--- a/repertoire.server/docker-compose.yaml
+++ b/repertoire.server/docker-compose.yaml
@@ -47,14 +47,14 @@ services:
       retries: 5
 
   meilisearch:
-    image: "getmeili/meilisearch:v1.13.0"
+    image: "getmeili/meilisearch:v1.33.1"
     container_name: Repertoire-Meilisearch
     ports:
       - "8002:7700"
     environment:
       - MEILI_MASTER_KEY=${MEILI_MASTER_KEY}
       # - MEILI_TASK_WEBHOOK_URL=http://Repertoire-Server:${SERVER_PORT}/api/search/meili-webhook # use me when running server in docker
-      - MEILI_TASK_WEBHOOK_URL=${MEILI_WEBHOOK_URL}
+      - MEILI_TASK_WEBHOOK_URL=${MEILI_WEBHOOK_URL} # use me when locally developing
       - MEILI_TASK_WEBHOOK_AUTHORIZATION_HEADER=${MEILI_WEBHOOK_AUTHORIZATION_KEY}
     volumes:
       - ./.container-data/meili_data:/meili_data
@@ -62,7 +62,7 @@ services:
       - repertoire_network
 
   centrifugo:
-    image: centrifugo/centrifugo:v6
+    image: centrifugo/centrifugo:v6.6.0
     container_name: Repertoire-Centrifugo
     command: centrifugo -c /centrifugo/config.json
     ports:
