--- a/repertoire.ui/package.json
+++ b/repertoire.ui/package.json
@@ -18,49 +18,49 @@
     "@emotion/serialize": "^1.3.3",
     "@emotion/utils": "^1.4.2",
     "@hello-pangea/dnd": "^18.0.1",
-    "@mantine/core": "^8.2.4",
-    "@mantine/dates": "^8.2.4",
-    "@mantine/dropzone": "^8.2.4",
-    "@mantine/emotion": "^8.2.4",
-    "@mantine/form": "^8.2.4",
-    "@mantine/hooks": "^8.2.4",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tabler/icons-react": "^3.34.1",
+    "@mantine/core": "^8.3.13",
+    "@mantine/dates": "^8.3.13",
+    "@mantine/dropzone": "^8.3.13",
+    "@mantine/emotion": "^8.3.13",
+    "@mantine/form": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@tabler/icons-react": "^3.36.1",
     "async-mutex": "^0.5.0",
-    "centrifuge": "^5.4.0",
-    "dayjs": "^1.11.13",
-    "dragselect": "^3.1.1",
+    "centrifuge": "^5.5.3",
+    "dayjs": "^1.11.19",
+    "dragselect": "^3.1.2",
     "mantine-form-zod-resolver": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.1",
+    "react-router-dom": "^6.30.3",
     "react-toastify": "^11.0.5",
-    "uuid": "^11.1.0",
-    "zod": "^4.0.17"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.2",
-    "@eslint/js": "^9.33.0",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
+    "@eslint/js": "^9.39.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.2.1",
-    "@types/react": "^18.3.23",
+    "@types/node": "^25.0.9",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@types/ws": "^8.18.1",
-    "@vitest/ui": "^3.2.4",
-    "eslint": "^9.33.0",
+    "@vitest/ui": "^4.0.17",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.3.0",
-    "happy-dom": "^18.0.1",
-    "msw": "^2.10.4",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.4",
+    "globals": "^17.0.0",
+    "happy-dom": "20.3.4",
+    "msw": "^2.12.7",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.17",
     "ws": "^8.18.3"
   }
 }
