--- a/repertoire.web/package.json
+++ b/repertoire.web/package.json
@@ -17,19 +17,17 @@
     "repertoire.ui": "file:../repertoire.ui"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@mantine/core": "^8.2.4",
-    "@mantine/emotion": "^8.2.4",
-    "@types/node": "^24.2.1",
-    "@types/react": "^18.3.23",
+    "@eslint/js": "^9.39.2",
+    "@mantine/core": "^8.3.13",
+    "@mantine/emotion": "^8.3.13",
+    "@types/node": "^25.0.9",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
-    "vite": "6.3.5"
+    "eslint": "^9.39.2",
+    "globals": "^17.0.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
+    "vite": "^7.3.1"
   }
 }
