#586 Desktop - Update Eslint Config

--- a/repertoire.desktop/electron-builder.yml
+++ b/repertoire.desktop/electron-builder.yml
@@ -7,7 +7,7 @@ files:
   - '!node_modules/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
-  - '!{.editorconfig,.eslintignore,.gitignore,.prettierignore,.prettierrc.yaml,eslint.config.mjs}'
+  - '!{.editorconfig,.gitignore,.prettierignore,.prettierrc.yaml,eslint.config.mjs}'
   - '!{dev-app-update.yml,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
