--- a/repertoire.web/package.json
+++ b/repertoire.web/package.json
@@ -13,19 +13,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "repertoire.ui": "file:../repertoire.ui"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@mantine/core": "^8.3.13",
     "@mantine/emotion": "^8.3.13",
-    "@types/node": "^25.0.9",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^17.0.0",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3",
